# final-project-aedrouhard

./: .coverage.uniformmaze-judohusband.12551.973506  .coverage.uniformmaze-judohusband.12555.209260  .coverage.uniformmaze-judohusband.12559.310898  ChildCheckPrez.pptx  LICENSE  requirements.txt  setup.cfg  tox.ini
childcheck.egg-info/: PKG-INFO  SOURCES.txt
reports1/doc/python/: index.html
reports1/doc/python/src/: confest.html  index.html
reports1/doc/python/test/: index.html
reports1/mypy/: index.html
reports1/mypy/html/src/: __init__.py.html  __main__.py.html  confest.py.html
reports1/pytest-data/: index.html
reports1/pytest-gui/: index.html
src/: __init__.py  __main__.py  confest.py
src/childcheck/: Main.py  __init__.py
src/childcheck/data/: __init__.py
src/childcheck/data/enums/: Severity.py  __init__.py
src/childcheck/data/experience/: Abuse.py  Experience.py  Neglect.py  Trauma.py  __init__.py
src/childcheck/data/person/: Factor.py  Person.py
src/childcheck/data/results/: Results.py  ResultsNumberSingleton.py  __init__.py
src/childcheck/data/signs/: AntiSocial.py  Arson.py  Impulsivity.py  NoEmpathy.py  Sign.py  WetBed.py  __init__.py
src/childcheck/data/violence/: Animals.py  CertainSex.py  General.py  Violence.py  __init__.py
src/childcheck/gui/: FactorPanel.py  HelpDialog.py  PanelFactory.py  ParentPanel.py  PrimaryWindow.py  ResultsDialog.py  ResultsPanel.py  SelectionPanel.py  __init__.py
src/childcheck/gui/experience/: ExperiencePanel.py  __init__.py
src/childcheck/gui/signs/: AntiSocialPanel.py  (+5 more)
test/: __init__.py
(+188 files in other folders)
