[metadata]
name = childcheck
version = 0.1.0
author = Allison Drouhard
author_email = aedrouhard@ksu.edu
description = A diagnostic program for children showing certain characteristics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksu-cc-410-fall2021/final-project-aedrouhard
    Bug Tracker = https://github.com/ksu-cc-410-fall2021/final-project-aedrouhard/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include-package-data = True

[options.package_data]
childcheck = py.typed
